improved shell scripts to move marlin options in env_marlin.sh + added benchmark loop shells (5 iterations)