@@ -1,34 +1,10 @@
 #!/bin/bash
-# get paths
+# get paths and jvm settings:
 source ./env.sh
-
-# server jvm 
-JAVA_OPTS="-server"
-# -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
-
-# headless mode
-#JAVA_OPTS="-server -Djava.awt.headless=true -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
-#JAVA_OPTS="-XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
-
-#JAVA_TUNING=" -Xms256m  -Xmx256m -XX:-TieredCompilation"
-#JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+TieredCompilation"
-#JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+AggressiveOpts -XX:CompileThreshold=1000"
-
-#JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseConcMarkSweepGC"
-JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:InitiatingHeapOccupancyPercent=60"
-# -verbose:gc"
-
-# "-XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled"
-#JAVA_TUNING=" -Xms2048m  -Xmx2048m -ea -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC"
-
-# MapBench:
-CLASSPATH=$MAP_BENCH_JAR
-
-BOOTCLASSPATH=""
 
 echo "CLASSPATH:   $CLASSPATH"
 echo "Boot CP:     $BOOTCLASSPATH"
-echo "Java Opts:   $JAVA_OPTS"
+echo "Java opts:   $JAVA_OPTS"
 echo "Java tuning: $JAVA_TUNING"
 
 echo "JVM path"
@@ -38,4 +14,3 @@ echo "Java version"
 java -version
 
 java -Dmapbench.profile=$PROFILE $BOOTCLASSPATH $JAVA_OPTS $JAVA_TUNING -cp $CLASSPATH it.geosolutions.java2d.MapBench
-
